// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate request fails with incorrect answer 1`] = `
Array [
  ValidationError {
    "children": Array [
      ValidationError {
        "children": Array [
          ValidationError {
            "children": Array [],
            "constraints": Object {
              "isString": "answer must be a string",
              "minLength": "answer must be longer than or equal to 1 characters",
            },
            "property": "answer",
            "target": Answer {},
            "value": undefined,
          },
          ValidationError {
            "children": Array [],
            "constraints": Object {
              "isInt": "choice must be an integer number",
              "max": "choice must not be greater than 5",
              "min": "choice must not be less than 1",
            },
            "property": "choice",
            "target": Answer {},
            "value": undefined,
          },
        ],
        "property": "0",
        "target": Array [
          Answer {},
        ],
        "value": Answer {},
      },
    ],
    "property": "answers",
    "target": Request {
      "answers": Array [
        Answer {},
      ],
      "email": "mihau@gmail.com",
    },
    "value": Array [
      Answer {},
    ],
  },
]
`;

exports[`validate request fails with incorrect email 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isEmail": "email must be an email",
    },
    "property": "email",
    "target": Request {
      "answers": Array [],
      "email": "mihaugmail.com",
    },
    "value": "mihaugmail.com",
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "arrayNotEmpty": "answers should not be empty",
    },
    "property": "answers",
    "target": Request {
      "answers": Array [],
      "email": "mihaugmail.com",
    },
    "value": Array [],
  },
]
`;

exports[`validate request fails without email 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isEmail": "email must be an email",
      "isString": "email must be a string",
    },
    "property": "email",
    "target": Request {
      "answers": Array [],
      "email": null,
    },
    "value": null,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "arrayNotEmpty": "answers should not be empty",
    },
    "property": "answers",
    "target": Request {
      "answers": Array [],
      "email": null,
    },
    "value": Array [],
  },
]
`;
